tests/reference/ast-fixed_form_3-7f8625a.stderr
syntax error: Newline is unexpected here
 --> tests/errors/fixed_form_3.f:4:21
  |
4 | 500   print *, sin(y
  |                     ^ 
